--- a/dwh.cfg
+++ b/dwh.cfg
@@ -6,9 +6,25 @@ DB_PASSWORD=
 DB_PORT=
 
 [IAM_ROLE]
-ARN=''
+DWH_IAM_ROLE=dwhRole
+ARN=
 
 [S3]
-LOG_DATA='s3://udacity-dend/log-data'
-LOG_JSONPATH='s3://udacity-dend/log_json_path.json'
-SONG_DATA='s3://udacity-dend/song-data'
+LOG_DATA=s3://udacity-dend/log-data
+LOG_JSONPATH=s3://udacity-dend/log_json_path.json
+SONG_DATA=s3://udacity-dend/song-data
+
+[AWS]
+KEY=
+SECRET=
+TOKEN=
+
+[REDSHIFT]
+CLUSTER_TYPE=multi-node
+NODES=4
+NODE_TYPE=dc2.large
+CLUSTER_ID=dwhCluster
+DB=dwh
+USER=dwhuser
+PWD=Passw0rd
+PORT=5439
