Get role ARN from dwh.cfg

--- a/dwh.cfg
+++ b/dwh.cfg
@@ -1,5 +1,6 @@
 [IAM_ROLE]
 DWH_IAM_ROLE=dwhRole
+DWH_IAM_ROLE_ARN=arn:aws:iam::051611116633:role/dwhRole
 
 [S3]
 LOG_DATA=s3://udacity-dend/log-data
